add job search by subcategory endpoint and SQL query
