# src/config/swagger.yaml
@@ -108,6 +108,23 @@ paths:
         404:
           description: "Data not found"
 
+  /job/search/subcatagory/{sub_category_id}:
+    get:
+      summary: "Get jobs by subcatagory id"
+      tags:
+        - "job"
+      parameters:
+        - name: "sub_category_id"
+          in: "path"
+          description: "The sub_category_id of the job"
+          required: true
+          type: "integer"
+      responses:
+        200:
+          description: "A list of jobs"
+        404:
+          description: "Data not found"  
+
 components:
   schemas:
     basicinfo:
