# src/routes/job.route.js
@@ -6,4 +6,7 @@ const router = express.Router();
 router.post("/search", jobC.searchJob);
 // router.post("/", jobC.createUser);
 
+//art
+router.get("/search/subcatagory/:sub_category_id", jobC.searchJobBySubcatagoryId);
+
 export default router;
